<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2018 Pratim Majumder

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                tools:ignore="LabelFor">

                <TextView
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/enter_cipher" />

                <EditText
                    android:id="@+id/cipherMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textIsSelectable="true"
                    android:hint="@string/some_hidden"
                    android:inputType="textMultiLine|textCapCharacters"
                    android:maxLength="1000" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_key" />

                <EditText
                    android:id="@+id/keyDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/abigkey"
                    android:textIsSelectable="true"
                    android:inputType="textCapCharacters"
                    android:maxLength="1000" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plain_" />

                <TextView
                    android:id="@+id/plainResult"
                    android:textSize="17sp"
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/decrypted_text_will_appear_here"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <com.wangjie.rapidfloatingactionbutton.RapidFloatingActionLayout xmlns:rfal="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_des_rfal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        rfal:rfal_frame_alpha="0.5"
        rfal:rfal_frame_color="#000000">

        <com.wangjie.rapidfloatingactionbutton.RapidFloatingActionButton xmlns:rfab="http://schemas.android.com/apk/res-auto"
            android:id="@+id/activity_des_rfab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:padding="8dp"
            rfab:rfab_color_normal="@color/colorAccent"
            rfab:rfab_color_pressed="@color/colorAccent_pressed"
            rfab:rfab_drawable="@drawable/ic_action"
            rfab:rfab_shadow_color="#999999"
            rfab:rfab_shadow_radius="7dp"
            rfab:rfab_size="normal" />
    </com.wangjie.rapidfloatingactionbutton.RapidFloatingActionLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>